...
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btn_add_widget"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/btn_widget"
            android:textSize="13sp"
...
    </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#cccc"/>
    <LinearLayout
        android:id="@+id/video_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        >
        <FrameLayout
            android:id="@+id/fragment_video"
...
