...
            android:layout_marginTop="30dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">
            <ImageView
                android:id="@+id/move_prev_img"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/leftarrow"
                android:contentDescription="@string/description"

                />
...
                android:layout_weight="1"
                android:textColor="#cccc"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/video_note"/>
            <ImageView
                android:id="@+id/move_next_img"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/rightarrow"
                android:contentDescription="@string/description"

                />
...
