<resources>
    <string name="app_name">Recipe APP</string>
    <string name="recipe_card_image">Recipe Card Image</string>
    <string name="internet_connection">No Internet Connection</string>
    <string name="sorry_no_internet_connection">Sorry! No Internet Connection</string>
    <string name="recipe_ingredient">Recipe Ingredient</string>
    <string name="steps">Steps</string>
    <string name="appwidget_text">example</string>
    <string name="add_widget">Add widget</string>
    <string name="video_note">Click to move on the next or previous step</string>
    <string name="btn_widget">Add to the home Screen</string>
    <string name="description">Add to the home Screen</string>

</resources>
