<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_gravity="start"
        android:text="@string/recipe_ingredient"
        android:textColor="@android:color/holo_blue_light"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ingredient_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>